# solutio

./: .gitignore  Anchor.toml  README.md  package.json
example-app/: package.json
example-app/components/: IpfsDownload.tsx
example-app/hooks/: useIPFS.ts
example-app/pages/: index.tsx
payment-processor/: config-overrides.js  package.json  webpack.config.js
payment-processor/config/: webpack.config.js
payment-processor/src/: App.tsx
payments-processor/: package.json  tsconfig.json
programs/autopay/: Cargo.toml
programs/solutio/: Cargo.toml
programs/solutio/src/: error.rs  id.rs  lib.rs  state.rs  util.rs
programs/solutio/src/thread/: cancel_payment.rs  mod.rs  setup_new_payment.rs  update_payment.rs
programs/solutio/src/token/: delegate_transfer_authority.rs  mod.rs  transfer_tokens.rs  transfer_tokens_direct.rs  transfer_tokens_via_authority.rs
sdk/: AutopayIDL.json  SolutioIDL.json  package.json  tsconfig.json
sdk/src/: buffer.ts  constants.ts  helpers.ts  index.ts  pdas.ts
server/: .gitignore  dispatch.yaml  tsconfig.json
server/payments/: package.json  tsconfig.json
server/solana-pay/: package.json  tsconfig.json
solana-pay-server/: .gitignore  package.json  tsconfig.json
solana-pay-server/src/: app.module.ts  app.service.ts  main.ts
tests/: .env  package.json
tests/src/: utils.ts
tests/thread/: e2e.test.ts  setup.test.ts
utils/: constants.ts  index.ts  pdas.ts
utils/actions/: cancelPayment.ts  delegateTransferAuthority.ts  index.ts  setupPayment.ts  (+1 more)
xnft/: package.json  tsconfig.json  webpack.config.js  xnft.json
(+87 files in other folders)
