[package]
name = "solutio"
version = "0.1.1"
description = "Created with Anchor"
rust-version = "1.56"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solutio"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
clockwork-sdk = "2.0.1"
clockwork-cron = "2.0.1"
clockwork-thread-program = { version = "2.0.1", features = ["no-entrypoint"] }
spl-token = "3.5.0"
spl-token-2022 = "0.6.1"